--- a/site/guide/model-workflows/_link-workflow-together.qmd
+++ b/site/guide/model-workflows/_link-workflow-together.qmd
@@ -22,7 +22,7 @@ To link subsequent steps together:
 
 1. Click the **{{< fa circle >}}** below or to the right or left of the earlier step and drag it to connect to any **{{< fa circle >}}** on the subsequent step.
 
-    You're also able to link several different steps together at various points in the workflow, including stages that may circle back to previous steps.*
+    You're also able to link several different steps together at various points in the workflow, including stages that may circle back to previous steps.
 
 1. When you are finished linking your configured steps together, designate an **{{< fa circle-stop >}} End** step.
 
