--- a/site/guide/model-workflows/configure-model-workflows.qmd
+++ b/site/guide/model-workflows/configure-model-workflows.qmd
@@ -8,6 +8,10 @@ aliases:
 
 Configure workflows to match your organizational needs throughout your model lifecycles. Workflows can be as simple or as complex as required, with multiple and discrete workflows supported for unique triggers and scenarios.
 
+::: {.callout}
+For more assistance configuring workflows, refer to our [Workflow configuration examples](workflow-configuration-examples.qmd).
+:::
+
 ::: {.attn}
 
 ## Prerequisites
@@ -22,9 +26,9 @@ Configure workflows to match your organizational needs throughout your model lif
 
 To set up a new custom workflow, you'll need to complete these three steps in sequence:
 
- 1. [Add a new workflow](#add-new-workflows)
- 2. [Configure the workflow steps](#configure-workflow-steps)
- 3. [Link the workflow together](#link-workflow-together)
+1. [Add a new workflow](#add-new-workflows)
+2. [Configure the workflow steps](#configure-workflow-steps)
+3. [Link the workflow together](#link-workflow-together)
 
 ### Add new workflows
 
@@ -64,7 +68,7 @@ a. Make your desired changes to step configuration[^4] and step relationships[^5
 
 b. When you are finished, click **Save Workflow** to apply your changes.
 
-### Delete workflow steps*
+### Delete workflow steps
 
 ::: {.callout-important title="Workflow step deletion is permanent."}
 Deleting workflow steps on workflows active on models may result in malfunctioning workflows.
@@ -88,7 +92,7 @@ Deleting workflow steps on workflows active on models may result in malfunctioni
 
 3. When you are finished, click **Save Workflow** to apply your changes.
 
-## Delete existing workflows*
+## Delete existing workflows
 
 ::: {.callout-important title="Workflow deletion is permanent."}
 - If a workflow is in use on a model, that model will not be impacted.
