--- a/site/guide/model-workflows/setting-up-model-workflows.qmd
+++ b/site/guide/model-workflows/setting-up-model-workflows.qmd
@@ -34,6 +34,10 @@ A workflow is comprised of an interplay of these elements:
 
 ### Workflow step types
 
+::: {.callout}
+For more assistance configuring workflow step types, refer to our [Workflow configuration examples](workflow-configuration-examples.qmd#workflow-step-type-examples).
+:::
+
 ::: {.panel-tabset}
 
 ### Transitions
@@ -121,7 +125,7 @@ To configure a condition branch:
 #### {{< fa clock >}} Wait
 <span id="wait"></span>
 
-- Creates a time condition for displaying next available action.
+- Creates a time condition for displaying next available action.[^15]
 - Used to enforce a time delay or a calendar date milestone.
 
 ::: {.callout title="Time stamp configuration is in the current user's timezone."}
@@ -135,7 +139,7 @@ To configure a wait step, select when you would like to [resume workflow:]{.smal
 |---:|---|---|
 | After Time Interval  | [wait duration]{.smallcaps} | Wait for a set amount of time. Applies to all models under the workflow. |
 | At Specified Date | [wait until]{.smallcaps} | Wait until a specific timestamp. Applies to all models under the workflow. If the milestone date inputted is in the past, the next workflow step will display immediately. |
-| At Specified Date on Model Field | [model field]{.smallcaps}[^15] | Wait until a specific timestamp as defined by a model inventory field on a per model basis. If the selected field is empty[^16] or the milestone date inputted is in the past, the next workflow step will display immediately. |
+| At Specified Date on Model Field | [model field]{.smallcaps}[^16] | Wait until a specific timestamp as defined by a model inventory field on a per model basis. If the selected field is empty[^17] or the milestone date inputted is in the past, the next workflow step will display immediately. |
 : **{{< fa clock >}} Wait** step configuration {.hover tbl-colwidths="[30,15,45]"}
 
 ### Workflow Logic
@@ -149,12 +153,12 @@ Triggers another workflow indicated by **[select workflow to run]{.smallcaps}**,
 <span id="end"></span>
 
 - Designates the end of your workflow.
-- Use this step when all of your other steps have been configured and linked together.[^17]
+- Use this step when all of your other steps have been configured and linked together.[^18]
 :::
 
 ### Conditional requirements
 
-Configure conditional requirements for the following step types:[^18]
+Configure conditional requirements for the following step types:[^19]
 
 ::: {.panel-tabset}
 #### {{< fa cube >}} Model Stage Change
@@ -179,7 +183,7 @@ Configure conditional requirements for the following step types:[^18]
 
 #### {{< fa users >}} Approval
 
-- Select from either **User Roles**,[^19] **Model Stakeholder Types**,[^20] or either **User Role** or **User Type** inventory field[^21] for your **[approval group]{.smallcaps}**.
+- Select from either **User Roles**,[^20] **Model Stakeholder Types**,[^21] or either **User Role** or **User Type** inventory field[^22] for your **[approval group]{.smallcaps}**.
 
 - Under **[threshold]{.smallcaps}**, set the minimum percentage of approvers required for the resource to be approved.
 
@@ -197,17 +201,17 @@ Select when you would like to [resume workflow:]{.smallcaps}
 
 - **After Time Interval** — Set the **[wait duration]{.smallcaps}** in minutes, hours, or days.
 - **At Specified Date** — Set the **[wait until]{.smallcaps}** a specific timestamp.
-- **At Specified Date on Model Field** — Set the **[model field]{.smallcaps}**[^22] with a valid `Date` or `Date Time` type model inventory field that defines the specific timestamp on a per model basis.
+- **At Specified Date on Model Field** — Set the **[model field]{.smallcaps}**[^23] with a valid `Date` or `Date Time` type model inventory field that defines the specific timestamp on a per model basis.
 
 :::
 
 ### Workflow states
 
-Workflow states are statuses unique to a specific workflow, discrete from model stages.[^23]
+Workflow states are statuses unique to a specific workflow, discrete from model stages.[^24]
 
-#### Add workflow states
+### Add workflow states
 
-Add workflow states by either while configuring a **{{< fa wifi >}} Workflow State Change** step,[^24] or via the **{{< fa gear >}} Settings** page:
+Add workflow states by either while configuring a **{{< fa wifi >}} Workflow State Change** step,[^25] or via the **{{< fa gear >}} Settings** page:
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 2. Under Workspace, select **Workflow States**.
@@ -216,7 +220,7 @@ Add workflow states by either while configuring a **{{< fa wifi >}} Workflow Sta
 5. Enter in a **[name]{.smallcaps}** and a **[description]{.smallcaps}**, then select a **[color]{.smallcaps}** for your workflow state.
 6. Click **Save** to create the workflow state.
 
-#### Delete workflow states
+### Delete workflow states
 
 ::: {.callout-important title="Workflow state deletion is permanent."}
 If a state is or was previously in use  on a workflow within a {{< fa wifi >}} Workflow State Change step, the state cannot be deleted.
@@ -275,22 +279,26 @@ If a state is or was previously in use  on a workflow within a {{< fa wifi >}} W
 
 [^14]: [Configure custom workflows](configure-model-workflows.qmd#link-workflow-together)
 
-[^15]: [Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd#inventory-field-types)
+[^15]: [Conditional requirements](#conditional-requirements)
 
-[^16]: Make model inventory fields **[required on registration]{.smallcaps}** to ensure necessary fields have valid values.
+<!-- HERE -->
 
-[^17]: [Configure custom workflows](configure-model-workflows.qmd#link-workflow-together)
+[^16]: [Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd#inventory-field-types)
 
-[^18]: [Workflow step types](#workflow-step-types)
+[^17]: Make model inventory fields **[required on registration]{.smallcaps}** to ensure necessary fields have valid values.
 
-[^19]: [Manage roles](/guide/configuration/manage-roles.qmd)
+[^18]: [Configure custom workflows](configure-model-workflows.qmd#link-workflow-together)
 
-[^20]: [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)
+[^19]: [Workflow step types](#workflow-step-types)
 
-[^21]: [Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd#inventory-field-types)
+[^20]: [Manage roles](/guide/configuration/manage-roles.qmd)
+
+[^21]: [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)
 
 [^22]: [Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd#inventory-field-types)
 
-[^23]: [Manage model stages](manage-model-stages.qmd)
+[^23]: [Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd#inventory-field-types)
 
-[^24]: [Configure custom workflows](configure-model-workflows.qmd#configure-workflow-steps)
+[^24]: [Manage model stages](manage-model-stages.qmd)
+
+[^25]: [Configure custom workflows](configure-model-workflows.qmd#configure-workflow-steps)
