--- a/site/guide/model-workflows/workflow-configuration-examples.qmd
+++ b/site/guide/model-workflows/workflow-configuration-examples.qmd
@@ -7,7 +7,9 @@ Learn from example workflow configurations to help you tailor workflows to fit y
 
 ## Example workflows
 
-To cover activities in their model lifecycle up to model deployment, an organization has the following workflows configured:
+Workflows can be as simple or as complex as required, with multiple and discrete workflows supported for unique triggers and scenarios.
+
+For example, to cover activities in their model lifecycle up to model deployment, an organization has the following workflows configured:
 
 ::: {.panel-tabset}
 
@@ -37,7 +39,16 @@ This workflow is initiated when a field is populated — in this case, when the 
 
 ### On model deployment
 
-This workflow is initiated manually, when validation is complete and the model is ready for implementation.
+This workflow is initiated manually,[^7] when validation is complete and the model is approved for implementation.
+
+- test
+- test
+- test
+
+::: {.tc}
+![Example model deployment cycle workflow](example_model-deployment-workflow.png){fig-alt="A screenshot showing an example model deployment cycle workflow" .screenshot group="model-validation"}
+:::
+
 
 :::
 
@@ -134,3 +145,4 @@ For example, if you wanted your models where the field `GenAI Model` is set to `
 
 [^6]: [Setting up workflows](setting-up-model-workflows.qmd#workflow-states)
 
+[^7]: ![Adding a workflow that is manually initiated when a model is approved to be deployed](example_model-deployment.png){fig-alt="A screenshot showing the modal for addoing a workflow that is manually initiated when a model is approved to be deployed" .screenshot group="model-registration"}
