--- a/site/guide/model-workflows/workflow-configuration-examples.qmd
+++ b/site/guide/model-workflows/workflow-configuration-examples.qmd
@@ -50,13 +50,19 @@ This workflow is initiated manually,[^7] when validation is complete and the mod
 
 :::
 
-## Workflow step type examples**
+## Workflow step type examples
 
 #### {{< fa cube >}} Model Stage Change
 
+wip
+
 #### {{< fa wifi >}} Workflow State Change
 
+wip
+
 #### {{< fa arrow-pointer >}} User Action v2
+
+needs edit
 
 :::: {.flex .flex-wrap .justify-around}
 
@@ -79,6 +85,8 @@ Example
 
 #### {{< fa users >}} Approval
 
+needs edit
+
 :::: {.flex .flex-wrap .justify-around}
 
 ::: {.w-50-ns}
@@ -97,6 +105,8 @@ Example
 ::::
 
 #### {{< fa maximize >}} Condition Branch
+
+needs edit
 
 For example, if you wanted your models where the field `GenAI Model` is set to `true` to undergo a special legal approval process:
 
@@ -125,9 +135,16 @@ For example, if you wanted your models where the field `GenAI Model` is set to `
 
 #### {{< fa clock >}} Wait
 
+wip
+
 #### {{< fa arrow-right-arrow-left >}} Run Workflow
 
+wip
+
 #### {{< fa circle-stop >}} End
+
+wip
+
 
 <!-- FOOTNOTES -->
 
