Deleting old unused img

--- a/site/releases/2024/2024-jul-22/release-notes.qmd
+++ b/site/releases/2024/2024-jul-22/release-notes.qmd
@@ -148,7 +148,7 @@ You can now manage lifecycle processes within your {{< var validmind.platform >}
 
 ::::
 
-![Workflow step configuration](/guide/model-workflows/configure-steps.gif){fig-alt="A gif workflow step configuration" .screenshot}
+![Workflow step configuration](configure-steps.gif){fig-alt="A gif workflow step configuration" .screenshot}
 
 :::
 
