Ex. model stage change

--- a/site/guide/model-workflows/workflow-configuration-examples.qmd
+++ b/site/guide/model-workflows/workflow-configuration-examples.qmd
@@ -54,7 +54,22 @@ This workflow is initiated manually,[^7] when validation is complete and the mod
 
 #### {{< fa cube >}} Model Stage Change
 
-wip
+In this example, the model transitions into a stage[^11] called `In Documentation`:
+
+:::: {.flex .flex-wrap .justify-around}
+
+::: {.w-60-ns}
+
+![Example model stage change configuration modal](configure_model-stage-change.png){fig-alt="A screenshot showing an example model stage change configuration modal" .screenshot group="stage-change"}
+:::
+
+::: {.w-40-ns}
+
+![Example model stage change step](example_model-stage-change.png){fig-alt="A screenshot showing an example model stage change step" .screenshot group="stage-change"}
+
+:::
+
+::::
 
 #### {{< fa wifi >}} Workflow State Change
 
@@ -189,3 +204,5 @@ wip
 [^9]: [Manage model stages](manage-model-stages.qmd)
 
 [^10]: [Setting up workflows](setting-up-model-workflows.qmd#workflow-states)
+
+[^11]: [Manage model stages](manage-model-stages.qmd)
