Ex. workflow state change

--- a/site/guide/model-workflows/workflow-configuration-examples.qmd
+++ b/site/guide/model-workflows/workflow-configuration-examples.qmd
@@ -54,7 +54,7 @@ This workflow is initiated manually,[^7] when validation is complete and the mod
 
 #### {{< fa cube >}} Model Stage Change
 
-In this example, the model transitions into a stage[^11] called `In Documentation`:
+In this example, the model transitions into a stage[^11] called [In Documentation]{.bubble}:
 
 :::: {.flex .flex-wrap .justify-around}
 
@@ -73,7 +73,22 @@ In this example, the model transitions into a stage[^11] called `In Documentatio
 
 #### {{< fa wifi >}} Workflow State Change
 
-wip
+In this example, the workflow transitions into a state[^12] called [Model In Development]{.bubble} and progresses the workflow completion to 25%:
+
+:::: {.flex .flex-wrap .justify-around}
+
+::: {.w-60-ns}
+
+![Example workflow state change configuration modal](configure_workflow-state-change.png){fig-alt="A screenshot showing an example workflow state change configuration modal" .screenshot group="state-change"}
+:::
+
+::: {.w-40-ns}
+
+![Example workflow state change step](example_workflow-state-change.png){fig-alt="A screenshot showing an example workflow state change step" .screenshot group="state-change"}
+
+:::
+
+::::
 
 #### {{< fa arrow-pointer >}} User Action v2
 
@@ -206,3 +221,5 @@ wip
 [^10]: [Setting up workflows](setting-up-model-workflows.qmd#workflow-states)
 
 [^11]: [Manage model stages](manage-model-stages.qmd)
+
+[^12]: [Setting up workflows](setting-up-model-workflows.qmd#workflow-states)
