--- a/site/guide/model-workflows/workflow-configuration-examples.qmd
+++ b/site/guide/model-workflows/workflow-configuration-examples.qmd
@@ -60,12 +60,14 @@ In this example, the model transitions into a stage[^11] called [In Documentatio
 
 ::: {.w-60-ns}
 
-![Example model stage change configuration modal](configure_model-stage-change.png){fig-alt="A screenshot showing an example model stage change configuration modal" .screenshot group="stage-change"}
+![Example {{< fa cube >}} Model Stage Change
+ configuration modal](configure_model-stage-change.png){fig-alt="A screenshot showing an example Model Stage Change configuration modal" .screenshot group="stage-change"}
 :::
 
 ::: {.w-40-ns}
 
-![Example model stage change step](example_model-stage-change.png){fig-alt="A screenshot showing an example model stage change step" .screenshot group="stage-change"}
+![Example {{< fa cube >}} Model Stage Change
+ step](example_model-stage-change.png){fig-alt="A screenshot showing an example Model Stage Change step" .screenshot group="stage-change"}
 
 :::
 
@@ -79,12 +81,12 @@ In this example, the workflow transitions into a state[^12] called [Model In Dev
 
 ::: {.w-60-ns}
 
-![Example workflow state change configuration modal](configure_workflow-state-change.png){fig-alt="A screenshot showing an example workflow state change configuration modal" .screenshot group="state-change"}
+![Example {{< fa wifi >}} Workflow State Change configuration modal](configure_workflow-state-change.png){fig-alt="A screenshot showing an example Workflow State Change configuration modal" .screenshot group="state-change"}
 :::
 
 ::: {.w-40-ns}
 
-![Example workflow state change step](example_workflow-state-change.png){fig-alt="A screenshot showing an example workflow state change step" .screenshot group="state-change"}
+![Example {{< fa wifi >}} Workflow State Change step](example_workflow-state-change.png){fig-alt="A screenshot showing an example Workflow State Change step" .screenshot group="state-change"}
 
 :::
 
@@ -92,9 +94,25 @@ In this example, the workflow transitions into a state[^12] called [Model In Dev
 
 #### {{< fa arrow-pointer >}} User Action v2
 
-needs edit
+In this example, the user is presented with an action button labelled **{{< fa arrow-right >}} Submit Documentation For Review** that requires them to include a model export in a [modelExport]{.bubble} attachment type field.[^13]
 
 :::: {.flex .flex-wrap .justify-around}
+
+::: {.w-60-ns}
+
+![Example {{< fa arrow-pointer >}} User Action v2 configuration modal](configure_user-action.png){fig-alt="A screenshot showing an example User Action v2 configuration modal" .screenshot group="user-action"}
+:::
+
+::: {.w-40-ns}
+
+![Example {{< fa arrow-pointer >}} User Action v2 step](example_user-action.png){fig-alt="A screenshot showing an example User Action v2 step" .screenshot group="user-action"}
+
+:::
+
+::::
+
+
+<!-- :::: {.flex .flex-wrap .justify-around}
 
 ::: {.w-50-ns .mt2}
 
@@ -111,7 +129,7 @@ Example
 
 :::
 
-::::
+:::: -->
 
 #### {{< fa users >}} Approval
 
@@ -223,3 +241,5 @@ wip
 [^11]: [Manage model stages](manage-model-stages.qmd)
 
 [^12]: [Setting up workflows](setting-up-model-workflows.qmd#workflow-states)
+
+[^13]: [Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd#inventory-field-types)
