--- a/site/guide/model-workflows/workflow-configuration-examples.qmd
+++ b/site/guide/model-workflows/workflow-configuration-examples.qmd
@@ -7,6 +7,8 @@ Learn from example workflow configurations to help you tailor workflows to fit y
 
 ## Example workflows
 
+GOTTA RECAP IMAGES AFTER TESTING!!!
+
 Workflows can be as simple or as complex as required, with multiple and discrete workflows supported for unique triggers and scenarios.
 
 For example, to cover activities in their model lifecycle up to model deployment, an organization has the following workflows configured:
