On model registration edit

--- a/site/guide/model-workflows/setting-up-model-workflows.qmd
+++ b/site/guide/model-workflows/setting-up-model-workflows.qmd
@@ -85,12 +85,7 @@ Creates a button that performs an action on behalf of the user.
 When your workflow reaches the approval step, roles or users in the selected **[approval group]{.smallcaps}** will receive a preconfigured message.
 
 - Select from either **User Roles**, **Model Stakeholder Types**,or either **User Role** or **User Type** inventory field.[^10]
-- Must be connected to both a rejection and approval {{< fa cube >}} Model Stage Change step.[^11]
-
-::: {.callout}
-Please note that roles, stakeholders, or users must be assigned to the indicated **[approval group]{.smallcaps}** before the workflow is transitioned into the **{{< fa users >}} Approval** step in order for the message to be displayed to users in those categories.
-
-:::
+- Must be connected to both a rejection and approval {{< fa cube >}} Model Stage Change step.[^11]example
 
 | Field | Description |
 |---:|---|
