--- a/site/guide/model-workflows/workflow-configuration-examples.qmd
+++ b/site/guide/model-workflows/workflow-configuration-examples.qmd
@@ -28,9 +28,9 @@ This workflow initiates upon model registration[^1] — when models are added to
 
 ### On model validation
 
-This workflow is initiated when a field is populated — in this case, when the model development team submits their model for validation and enters in a date in the [submitted for validation]{.smallcaps} field via the **Submit for Validation** action step in the previous *On model registration* workflow.[^4]
+This workflow is initiated manually,[^4] in this case via {{< fa arrow-right-arrow-left >}} Run Workflow step in the previous *On model registration* workflow.
 
-- In this workflow, the model stage[^5] remains as [in initial validation]{.smallcaps} throughout, while the state of the workflow[^6] transitions to reflect the status of validation.
+- In this workflow, the model stage[^5] remains as [In Initial Validation]{.bubble} throughout, while the state of the workflow[^6] transitions to reflect the status of validation.
 - The option to develop potential challenger models is at the discretion of the validator, or they can choose to approve the champion model without submitting additional challengers.
 - Depending on whether or not the model is a GenAI model, the validation report is also submitted for additional review to the organization's legal team before approval.
 
@@ -40,11 +40,11 @@ This workflow is initiated when a field is populated — in this case, when the 
 
 ### On model deployment
 
-This workflow is initiated manually,[^7] when validation is complete and the model is approved for implementation.
+This workflow is initiated when a field is populated — in this case, when the model is scheduled for deployment by entering value into the [deployment scheduled]{.smallcaps} datetime field.[^7]
 
-- After this workflow is manually started,[^8] the model owner schedules implementation by entering in a projected deployment date.
+- After this workflow is manually started, the model owner schedules implementation by entering in a projected deployment date.
 - The workflow will wait until the timestamp indicated in the scheduled deployment date before revealing the next available action in the workflow — in this case, the option to deploy the model and enter in a concrete date the model was pushed to production.
-- Each action on this workflow is linked to a transition in model stage,[^9] as well as workflow state.[^10]
+- Each action on this workflow is linked to a transition in model stage,[^8] as well as workflow state.[^9]
 
 ::: {.tc}
 ![Example model deployment cycle workflow](example_model-deployment-workflow.png){fig-alt="A screenshot showing an example model deployment cycle workflow" .screenshot group="model-validation"}
@@ -56,7 +56,7 @@ This workflow is initiated manually,[^7] when validation is complete and the mod
 
 #### {{< fa cube >}} Model Stage Change
 
-In this example, the model transitions into a stage[^11] called [In Documentation]{.bubble}:
+In this example, the model transitions into a stage[^10] called [In Documentation]{.bubble}:
 
 :::: {.flex .flex-wrap .justify-around}
 
@@ -77,7 +77,7 @@ In this example, the model transitions into a stage[^11] called [In Documentatio
 
 #### {{< fa wifi >}} Workflow State Change
 
-In this example, the workflow transitions into a state[^12] called [Model In Development]{.bubble} and progresses the workflow completion to 25%:
+In this example, the workflow transitions into a state[^11] called [Model In Development]{.bubble} and progresses the workflow completion to 25%:
 
 :::: {.flex .flex-wrap .justify-around}
 
@@ -96,7 +96,7 @@ In this example, the workflow transitions into a state[^12] called [Model In Dev
 
 #### {{< fa arrow-pointer >}} User Action v2
 
-In this example, the user is presented with an action button labelled **{{< fa arrow-right >}} Submit Documentation For Review** that requires them to include a model export in a [modelExport]{.bubble} attachment type field.[^13]
+In this example, the user is presented with an action button labelled **{{< fa arrow-right >}} Submit Documentation For Review** that requires them to include a model export in a [modelExport]{.bubble} attachment type field.[^12]
 
 :::: {.flex .flex-wrap .justify-around}
 
@@ -234,14 +234,12 @@ wip
     - [{{< fa wifi >}} Workflow State Change](#workflow-state-change)
     - [{{< fa clock >}} Wait](#wait)
 
-[^8]: [Manage model workflows](manage-model-workflows.qmd#initiate-model-workflows)
+[^8]: [Manage model stages](manage-model-stages.qmd)
 
-[^9]: [Manage model stages](manage-model-stages.qmd)
+[^9]: [Setting up workflows](setting-up-model-workflows.qmd#workflow-states)
 
-[^10]: [Setting up workflows](setting-up-model-workflows.qmd#workflow-states)
+[^10]: [Manage model stages](manage-model-stages.qmd)
 
-[^11]: [Manage model stages](manage-model-stages.qmd)
+[^11]: [Setting up workflows](setting-up-model-workflows.qmd#workflow-states)
 
-[^12]: [Setting up workflows](setting-up-model-workflows.qmd#workflow-states)
-
-[^13]: [Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd#inventory-field-types)
+[^12]: [Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd#inventory-field-types)
