On model validation edit

--- a/site/guide/model-workflows/workflow-configuration-examples.qmd
+++ b/site/guide/model-workflows/workflow-configuration-examples.qmd
@@ -7,8 +7,6 @@ Learn from example workflow configurations to help you tailor workflows to fit y
 
 ## Example workflows
 
-GOTTA RECAP IMAGES AFTER TESTING!!!
-
 Workflows can be as simple or as complex as required, with multiple and discrete workflows supported for unique triggers and scenarios.
 
 For example, to cover activities in their model lifecycle up to model deployment, an organization has the following workflows configured:
@@ -28,7 +26,7 @@ This workflow initiates upon model registration[^1] — when models are added to
 
 ### On model validation
 
-This workflow is initiated manually,[^4] in this case via {{< fa arrow-right-arrow-left >}} Run Workflow step in the previous *On model registration* workflow.
+This workflow is initiated manually[^4] — in this case via {{< fa arrow-right-arrow-left >}} Run Workflow step in the previous *On model registration* workflow.
 
 - In this workflow, the model stage[^5] remains as [In Initial Validation]{.bubble} throughout, while the state of the workflow[^6] transitions to reflect the status of validation.
 - The option to develop potential challenger models is at the discretion of the validator, or they can choose to approve the champion model without submitting additional challengers.
@@ -47,7 +45,7 @@ This workflow is initiated when a field is populated — in this case, when the 
 - Each action on this workflow is linked to a transition in model stage,[^8] as well as workflow state.[^9]
 
 ::: {.tc}
-![Example model deployment cycle workflow](example_model-deployment-workflow.png){fig-alt="A screenshot showing an example model deployment cycle workflow" .screenshot group="model-validation"}
+![Example model deployment cycle workflow](example_model-deployment-workflow.png){fig-alt="A screenshot showing an example model deployment cycle workflow" .screenshot group="model-deployment"}
 :::
 
 :::
@@ -206,6 +204,7 @@ wip
     - [{{< fa cube >}} Model Stage Change](#model-stage-change)
     - [{{< fa wifi >}} Workflow State Change](#workflow-state-change)
     - [{{< fa users >}} Approval](#approval)
+    - [{{< fa arrow-right-arrow-left >}} Run Workflow](#run-workflow)
 
 [^2]: [Manage model stages](manage-model-stages.qmd)
 
@@ -225,7 +224,7 @@ wip
 
 [^6]: [Setting up workflows](setting-up-model-workflows.qmd#workflow-states)
 
-[^7]: ![Adding a workflow that is manually initiated when a model is approved to be deployed](example_model-deployment.png){fig-alt="A screenshot showing the modal for addoing a workflow that is manually initiated when a model is approved to be deployed" .screenshot group="model-registration"}
+[^7]: ![Adding a workflow that is manually initiated when a model is approved to be deployed](example_model-deployment.png){fig-alt="A screenshot showing the modal for addoing a workflow that is manually initiated when a model is approved to be deployed" .screenshot group="model-deployment"}
 
     **Workflow steps used:**
 
