Example workflows edited

--- a/site/guide/model-workflows/workflow-configuration-examples.qmd
+++ b/site/guide/model-workflows/workflow-configuration-examples.qmd
@@ -38,11 +38,10 @@ This workflow is initiated manually[^4] — in this case via {{< fa arrow-right-
 
 ### On model deployment
 
-This workflow is initiated when a field is populated — in this case, when the model is scheduled for deployment by entering value into the [deployment scheduled]{.smallcaps} datetime field.[^7]
+This workflow is initiated when a field is populated — in this case, when the model is slated for deployment by entering value into the [deployment scheduled]{.smallcaps} datetime field.[^7]
 
-- After this workflow is manually started, the model owner schedules implementation by entering in a projected deployment date.
-- The workflow will wait until the timestamp indicated in the scheduled deployment date before revealing the next available action in the workflow — in this case, the option to deploy the model and enter in a concrete date the model was pushed to production.
-- Each action on this workflow is linked to a transition in model stage,[^8] as well as workflow state.[^9]
+- The workflow will wait until the timestamp indicated in the scheduled deployment date before revealing the next available action in the workflow — in this case, the option to deploy the model and enter in a concrete date the model was initially pushed to production.
+- Actions on this workflow are linked both to a transition in model stage,[^8] as well as workflow state.[^9]
 
 ::: {.tc}
 ![Example model deployment cycle workflow](example_model-deployment-workflow.png){fig-alt="A screenshot showing an example model deployment cycle workflow" .screenshot group="model-deployment"}
@@ -224,7 +223,7 @@ wip
 
 [^6]: [Setting up workflows](setting-up-model-workflows.qmd#workflow-states)
 
-[^7]: ![Adding a workflow that is manually initiated when a model is approved to be deployed](example_model-deployment.png){fig-alt="A screenshot showing the modal for addoing a workflow that is manually initiated when a model is approved to be deployed" .screenshot group="model-deployment"}
+[^7]: ![Adding a workflow that is initiated when a model has a scheduled deployment date](example_model-deployment.png){fig-alt="A screenshot showing the modal for adding a workflow that is initiated when a model has a scheduled deployment date" .screenshot group="model-deployment"}
 
     **Workflow steps used:**
 
