ex. up to approval

--- a/site/guide/model-workflows/workflow-configuration-examples.qmd
+++ b/site/guide/model-workflows/workflow-configuration-examples.qmd
@@ -106,50 +106,32 @@ In this example, the user is presented with an action button labelled **{{< fa a
 
 ![Example {{< fa arrow-pointer >}} User Action v2 step](example_user-action.png){fig-alt="A screenshot showing an example User Action v2 step" .screenshot group="user-action"}
 
+![Example {{< fa arrow-pointer >}} User Action v2 button](example_user-action-button.png){fig-alt="A screenshot showing an example User Action v2 button" .screenshot group="user-action"}
+
 :::
 
 ::::
-
-
-<!-- :::: {.flex .flex-wrap .justify-around}
-
-::: {.w-50-ns .mt2}
-
-![User Action step configuration with a request field of Date on Hold](configure-user-action.png){fig-alt="A screenshot showing a User Action step configuration with a request field of Date On Hold" .screenshot group="user-action"}
-
-:::
-
-::: {.w-40-ns .mt2}
-
-![Action transition panel with the Date on Hold inventory field](user-action-inventory-field.png){fig-alt="A screenshot showing the action transition panel with the Date On Hold inventory field" .screenshot group="user-action"}
-
-Example
-: A `Put On Hold` action that requests a value in the Date On Hold field, and transitions the model lifecycle status to <br>[On Hold]{.bubble}.
-
-:::
-
-:::: -->
 
 #### {{< fa users >}} Approval
 
-needs edit
+In this example, the [peer reviewers]{.smallcaps} model stakeholders[^13] assigned to the model are presented with an approval message:
 
 :::: {.flex .flex-wrap .justify-around}
 
-::: {.w-50-ns}
-![APPROVAL GROUP step configuration with a User Roles selection of Validator](configure-approval-step.png){fig-alt="A screenshot showing an APPROVAL GROUP step configuration with a User Roles selection of Validator" .screenshot group="approval"}
+::: {.w-60-ns}
 
+![Example {{< fa users >}} Approval configuration modal](configure_approval.png){fig-alt="A screenshot showing an example Approval configuration modal" .screenshot group="approval"}
 :::
 
 ::: {.w-40-ns}
-![Setup for the Approval Message shown to the APPROVAL GROUP of User Roles — Validator](approval-group-setup.png){fig-alt="A screenshot showing the setup for the Approval Message shown to the APPROVAL GROUP of User Roles — Validator" .screenshot group="approval"}
 
-Example
-: A message shown to the User Roles — Validator requesting review of a model for compliance.
+![Example {{< fa users >}} Approval step](example_approval.png){fig-alt="A screenshot showing an example Approval step" .screenshot group="approval"}
 
 :::
 
 ::::
+
+![Example {{< fa users >}} Approval message](example_approval-message.png){fig-alt="A screenshot showing an example Approval message" .screenshot group="approval"}
 
 #### {{< fa maximize >}} Condition Branch
 
@@ -241,3 +223,5 @@ wip
 [^11]: [Setting up workflows](setting-up-model-workflows.qmd#workflow-states)
 
 [^12]: [Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd#inventory-field-types)
+
+[^13]: [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)
